[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailite"
version = "0.3.0"
description = "A powerful web content fetcher and processor"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "parselite",
    "searchlite"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pyopengenai"
"Bug Tracker" = "https://github.com/yourusername/pyopengenai/issues"