[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "visionlite"
version = "0.1.57"
description = "free google results"
authors = [ "Kammari Santhosh",]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/santhosh/"
keywords = [ "",]
include = [ "vision_gui.py", "vision_run.py",]
[[tool.poetry.packages]]
include = "visionlite"

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.9.0"
searchlite = "^0.7.5"
parselite = "^0.3.5"
wordllama = "^0.3.7"
langchain_core = "^0.3.28"
langchain_ollama = "^0.2.2"

[tool.poetry.scripts]
vision-gui = "vision_gui:run_app"
